# CTFdPy

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
coverage/: index.html
ctfdpy/: client.py  exceptions.py  index.html  utils.py
ctfdpy/api/: __init__.py  api.py  challenges.py  files.py  flags.py  hints.py  tags.py  teams.py  topics.py  users.py
ctfdpy/api/api/: index.html
ctfdpy/api/challenges/: index.html
ctfdpy/client/: index.html
ctfdpy/exceptions/: index.html
ctfdpy/models/: challenges.py  files.py  hints.py  model.py  teams.py  users.py
ctfdpy/types/: api.py  challenges.py  files.py  flags.py  hints.py
docs/: coverage.md  index.md
docs/endpoints/: challenges.md  comments.md  files.md  flags.md  hints.md  topics.md
endpoints/: index.html
endpoints/awards/: index.html
endpoints/brackets/: index.html
endpoints/challenges/: index.html
endpoints/comments/: index.html
endpoints/configs/: index.html
endpoints/files/: index.html
endpoints/flags/: index.html
endpoints/hints/: index.html
endpoints/notifications/: index.html
endpoints/pages/: index.html
endpoints/scoreboard/: index.html
endpoints/shares/: index.html
endpoints/statistics/: index.html
endpoints/submissions/: index.html
endpoints/tags/: index.html
endpoints/teams/: index.html
endpoints/tokens/: index.html
endpoints/topics/: index.html
endpoints/unlocks/: index.html
endpoints/users/: index.html
reference/: index.html
reference/client/: index.html
reference/exceptions/: index.html
search/: search_index.json
(+40 files in other folders)
