[project]
name = "CTFdPy"
version = "0.1.0"
description = "A python wrapper around the CTFd API"
authors = [
    { name = "JusCodin", email = "70018166+Jus-Codin@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic[email]>=2.10.6",
]

[dependency-groups]
docs = [
    "mkdocs-material>=9.6.7",
    "mkdocstrings[python]>=0.28.2",
]
